--- a/new_floor_plan_reconstruction/app/src/main/AndroidManifest.xml
+++ b/new_floor_plan_reconstruction/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:minSdkVersion="19"
         android:targetSdkVersion="23" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
